--- a/src/App.css
+++ b/src/App.css
@@ -354,9 +354,11 @@ responsive
   padding: 60px 0 200px 0;
 }
 .contact img {
+  margin-top: 18%;
   width: 92%;
 }
 .contact h2 {
+  text-align: center;
 	font-size: 45px;
 	font-weight: 700;
   margin-bottom: 30px;
@@ -367,7 +369,7 @@ responsive
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 20px;
   color: #fff;
-  margin: 0 0 8px 0;
+  margin: 0px 10px 8px -15px;
   padding: 18px 26px;
   font-weight: 500;
   font-size: 18px;
