--- a/src/App.css
+++ b/src/App.css
@@ -359,6 +359,8 @@ responsive
 }
 .contact h2 {
   text-align: center;
+  justify-content: center;
+  align-items: center;
 	font-size: 45px;
 	font-weight: 700;
   margin-bottom: 30px;
