--- a/src/App.css
+++ b/src/App.css
@@ -358,12 +358,17 @@ responsive
   width: 92%;
 }
 .contact h2 {
+  margin: 0px 10px 8px -25px;
   text-align: center;
   justify-content: center;
   align-items: center;
 	font-size: 45px;
 	font-weight: 700;
   margin-bottom: 30px;
+}
+.contact p{
+  margin: 0px 10px 8px -25px;
+
 }
 .contact-form input, .contact-form textarea {
   width: 100%;
